# Laser-Piano-Rust-Embassy

./: Cargo.toml  README.md  index.md  memory.x  rust-toolchain.toml
.cargo/: config.toml
Project-KiCad/: New_Library.bak  New_Library.kicad_sym  Project.kicad_pcb  Project.kicad_pro  Project.kicad_sch
UF2/: commands.txt
build_script/: Cargo.toml
build_script/src/: lib.rs
src/embassy/: Cargo.toml  build.rs
src/embassy/src/: main.rs  temp.rs
src/embassy/src/Backups/: 123454678.rs  12345t.rs  1235.rs  123546456.rs  438128.rs  Lab5_stuff.rs  blink_led_on_pin0.rs  main(B).rs  main(button_backup).rs  main.rs  plaaaaaaa.rs  ppp.rs  temp(main).rs  temp.rs  try.rs
src/embassy/src/Backups/display/: mod.rs
src/embassy/src/Backups/lab05/lab05_ex2/: Cargo.toml  build.rs
src/embassy/src/Backups/lab05/lab05_ex3_4_5/: Cargo.toml
src/embassy/src/Backups/lab05/lab05_ex3_4_5/src/: lib.rs  main.rs
src/embassy/src/Backups/lab05/lab05_ex3_4_5/src/display/: mod.rs
utils/: Cargo.toml
utils/src/: lib.rs  wifi.rs
