[package]
name = "embassy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m-rt = "0.7.3"
cortex-m = "=0.7.7"
embassy-executor = { version = "0.5.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "integrated-timers"] }
embassy-time = "0.3.0"
embassy-rp = { version = "0.1.0", features = ["time-driver", "critical-section-impl"] }
defmt = "0.3"  
log = "0.4.21"
embassy-usb-logger = "0.1.0"
embassy-sync = "0.5.0"
embassy-futures = "0.1.1"
embedded-sdmmc = "0.5.0"
embedded-hal = "1.0.0"
defmt-rtt = "0.4.0"





