[package]
name = "lab05_ex2"
authors.workspace = true
version.workspace = true
rust-version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m-rt = "0.7.3"
embassy-executor = { version = "0.5.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "integrated-timers"] }
embassy-time = { version = "0.3.0" }
embassy-rp = { version = "0.1.0", features = ["time-driver", "critical-section-impl"] }
embassy-sync = { version = "0.5.0" }
embassy-usb-logger = "0.1.0"
log = "0.4"