[package]
name = "lab05_ex3_4_5"
authors.workspace = true
version.workspace = true
rust-version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m-rt = "0.7.3"
embassy-executor = { version = "0.5.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "integrated-timers"] }
embassy-time = { version = "0.3.0" }
embassy-rp = { version = "0.1.0", features = ["time-driver", "critical-section-impl"] }
embassy-sync = { version = "0.5.0" }
embassy-usb-logger = "0.1.0"
log = "0.4"
embedded-hal = "1.0.0"
display-interface = "0.4.1"
byte-slice-cast = { version = "1.2.0", default-features = false }
embassy-embedded-hal = { version = "0.1.0" }
embedded-graphics = "0.7.1"
heapless = "0.8"
st7789 = "0.6.1"
embassy-futures = "0.1.1"